--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" 
 rel="stylesheet">
-<link rel="stylesheet" href=" style.css">
+<link rel="stylesheet" href="http://localhost:3000/assets/style.css">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
